// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package db

import (
	"database/sql/driver"
	"fmt"

	"github.com/google/uuid"
	"github.com/jackc/pgx/v5/pgtype"
)

type MembershipRole string

const (
	MembershipRoleCore  MembershipRole = "core"
	MembershipRoleGuest MembershipRole = "guest"
)

func (e *MembershipRole) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = MembershipRole(s)
	case string:
		*e = MembershipRole(s)
	default:
		return fmt.Errorf("unsupported scan type for MembershipRole: %T", src)
	}
	return nil
}

type NullMembershipRole struct {
	MembershipRole MembershipRole `json:"membership_role"`
	Valid          bool           `json:"valid"` // Valid is true if MembershipRole is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullMembershipRole) Scan(value interface{}) error {
	if value == nil {
		ns.MembershipRole, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.MembershipRole.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullMembershipRole) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.MembershipRole), nil
}

type MembershipStatus string

const (
	MembershipStatusActive   MembershipStatus = "active"
	MembershipStatusInactive MembershipStatus = "inactive"
)

func (e *MembershipStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = MembershipStatus(s)
	case string:
		*e = MembershipStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for MembershipStatus: %T", src)
	}
	return nil
}

type NullMembershipStatus struct {
	MembershipStatus MembershipStatus `json:"membership_status"`
	Valid            bool             `json:"valid"` // Valid is true if MembershipStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullMembershipStatus) Scan(value interface{}) error {
	if value == nil {
		ns.MembershipStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.MembershipStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullMembershipStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.MembershipStatus), nil
}

type Attendance struct {
	ID     uuid.UUID `json:"id"`
	PickID uuid.UUID `json:"pick_id"`
	UserID uuid.UUID `json:"user_id"`
}

type Group struct {
	ID        uuid.UUID          `json:"id"`
	Name      string             `json:"name"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}

type Membership struct {
	ID               uuid.UUID          `json:"id"`
	GroupID          uuid.UUID          `json:"group_id"`
	UserID           uuid.UUID          `json:"user_id"`
	Role             MembershipRole     `json:"role"`
	Status           MembershipStatus   `json:"status"`
	BaselinePicks    int32              `json:"baseline_picks"`
	RotationPosition int32              `json:"rotation_position"`
	JoinedAt         pgtype.Timestamptz `json:"joined_at"`
	LeftAt           pgtype.Timestamptz `json:"left_at"`
}

type Movie struct {
	ID          uuid.UUID          `json:"id"`
	TmdbID      int32              `json:"tmdb_id"`
	Title       string             `json:"title"`
	ReleaseYear pgtype.Int4        `json:"release_year"`
	CachedAt    pgtype.Timestamptz `json:"cached_at"`
	PosterPath  pgtype.Text        `json:"poster_path"`
}

type Pick struct {
	ID           uuid.UUID          `json:"id"`
	GroupID      uuid.UUID          `json:"group_id"`
	PickerID     pgtype.UUID        `json:"picker_id"`
	IsCredited   bool               `json:"is_credited"`
	ScheduledFor pgtype.Date        `json:"scheduled_for"`
	CreatedAt    pgtype.Timestamptz `json:"created_at"`
	MovieID      pgtype.UUID        `json:"movie_id"`
}

type User struct {
	ID             uuid.UUID          `json:"id"`
	Name           string             `json:"name"`
	LetterboxdUser pgtype.Text        `json:"letterboxd_user"`
	CreatedAt      pgtype.Timestamptz `json:"created_at"`
}
